Fix overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -676,3 +676,7 @@ header.header-mobile { display: none }
   header.header-normal { display: none }
   header.header-mobile { display: block }
 }
+
+#app {
+  overflow-x: hidden;
+}
